--- a/files/dnsmasq.conf
+++ b/files/dnsmasq.conf
@@ -1,4 +1,4 @@
 no-resolv
 no-hosts
-listen-address= {{ hostvars['localhost']['front_private_ip'] }}, {{ hostvars['localhost']['front_public_ip'] }}, 127.0.0.1
-server=/{{ c2_domain }}/{{ hostvars['localhost']['team_private_ip'] }}
+listen-address={{ hostvars['localhost']['front_private_ip'] }},{{ hostvars['localhost']['front_public_ip'] }},127.0.0.1
+server=/dragoat.com/{{ hostvars['localhost']['team_private_ip'] }}
