--- a/files/config.template
+++ b/files/config.template
@@ -2,17 +2,17 @@ Host *compute*.amazonaws.com
   User ubuntu
   StrictHostKeyChecking no
   Port 22
-  IdentityFile {{ public_key }}
+  IdentityFile ~/.ssh/{{ key_name }}
 Host front_{{ customer }}
   HostName {{ front_public_ip }}
   HostName {{ front_dns_name }}
   StrictHostKeyChecking no
   User ubuntu
-  IdentityFile {{ public_key }}
+  IdentityFile ~/.ssh/{{ key_name }}
 Host team_{{ customer }}
   Hostname {{ team_private_ip }}
   ProxyJump front_{{ customer }}
   StrictHostKeyChecking no
   LocalForward 50050 localhost:50050
   User ubuntu
-  IdentityFile {{ public_key }}
+  IdentityFile ~/.ssh/{{ key_name }}
